# zeteo-web

./: .env.example  .gitignore  .vercelignore  AI-BOT-SETUP.md  INTEGRATION-COMPLETE.md  NEUROLINK-INTEGRATION.md  PROJECT-COMPLETE.md  PROJECT-STRUCTURE.md  QUICKSTART.md  README.md  package.json  vercel.json
api/: analyze.ts  debug.ts  health.ts  package.json  query.ts
backend/: .env.example  Cargo.toml
backend/src/: ai.rs  main.rs  openobserve.rs
docs/: AI-BOT-SETUP.md  COMPARISON.md  NEUROLINK-USAGE.md  PROJECT-COMPLETE.md  PROJECT-STRUCTURE.md  README.md  RUST-BACKEND-EXPLAINED.md  STREAMING.md  VERCEL-DEPLOYMENT.md  config-examples.md  otel-mcp-server-setup.md  query-examples.md
frontend/: .gitignore  package.json
frontend/src/lib/: LogResults.svelte  QueryInterface.svelte  Settings.svelte  Settings.svelte.backup
frontend/src/routes/: +page.svelte
rust-backend/src/: elasticsearch.rs  main.rs  models.rs
src/: app.css  app.html
src/lib/components/: Backdrop.svelte  Button.svelte  FeatureCard.svelte  Logo.svelte  Terminal.svelte
src/lib/stores/: auth.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/login/: +page.svelte
