[package]
name = "logs-explorer-backend"
version = "0.1.0"
edition = "2021"
authors = ["logs-explorer contributors"]
description = "High-performance Rust backend for AI-powered log exploration"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Elasticsearch client
elasticsearch = "8.5"

# Environment and configuration
dotenv = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# OpenAI/AI integration
async-openai = "0.20"
